--- a/css/custom.css
+++ b/css/custom.css
@@ -114,6 +114,8 @@
   .enumRoman ol {
     list-style-type: lower-roman;
   }
+
+  
   
   .enumRoman ol li::marker{
     content: counter(list-item, lower-roman) ")";
@@ -123,8 +125,51 @@
     /* font-style: italic;     */
   }
 
+
   
+
+/* VERSION 4 */
+
+.enumRomanSpace{
+  margin-top: -2.0em;  
+}
+.enumRomanSpace ol{ 
+  padding-left: 0.5em;  
+  line-height: 1.55;
+  padding-top: 1em;
+  padding-bottom: 0;}
+
+.enumRomanSpace ol li{ 
+    margin-left: -1em;    }
   
+.enumRomanSpace ol li p{ 
+  margin-left: 0.5em;
+  margin-bottom:0.25em;
+  line-height: 1.55;
+  text-indent:0;
+  padding-top: 0em;}
+
+
+.enumRomanSpace li > ol, .enumRomanSpace li > ol > li{
+    margin-top: -0.5em;
+    margin-bottom: 2em;
+    padding-top:-1em;
+    padding-bottom:1em;    
+  }
+
+
+  .enumRomanSpace ol {
+    list-style-type: lower-roman;    
+  }
+  
+ 
+  .enumRomanSpace ol li::marker{
+    content: counter(list-item, lower-roman) ")";
+    color: rgb(83, 129, 175); 
+    /* color:black; */
+    font-weight: bold;
+    font-style: italic;    
+  }
 
   
  
